catches every user action

--- a/gestion-notes/src/main/resources/application.properties
+++ b/gestion-notes/src/main/resources/application.properties
@@ -16,3 +16,18 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+#====================================
+# Enable logging to file
+logging.file.name=logs/app-journal.log
+logging.file.max-size=100MB
+logging.file.max-history=30
+
+# Set logging levels
+logging.level.APP_JOURNAL=INFO
+logging.level.com.yourpackage=DEBUG
+
+# Log pattern with emojis and colors (for console)
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %highlight(%-5level) %cyan([%X{user}]) %green([%X{action}]) - %msg%n
+
+# Log pattern for file (structured)
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level [%X{user}] [%X{action}] [%X{correlationId}] %logger{36} - %msg%n
